# portfolioMauricioobgo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  README.md  asset-manifest.json  blogs.json  docs-content-refresh.md  env.example  index.html  package-lock.json  package.json  profile.json  pyproject.toml  rxconfig.py  site.css
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-gh-pages.yml  deploy-pages.yml  deploy.yml  refresh-gh-pages.yml
assets/: _404_._index-BN8yGzB9.js  __reflex_global_styles-BNK0jVLg.css  _index-Bjt0lJTh.js  chunk-OE4NN4TA-CogLZc-c.js  emotion-react.browser.esm-HjzsM01T.js  entry.client-D0Hh9hTr.js  esm-C2z5QPEj.js  manifest-64789728.js  react-dom-C7n_fRtp.js  root-BVsLThHt.js  site.css
frontend/: pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
portfolio_app/: __init__.py  app.py  portfolio_app.py
portfolio_app/components/: sections.py
portfolio_app/data/: certifications.yaml  experience.yaml  featured_projects.yaml  profile.yaml  projects.yaml
portfolio_app/pages/: home.py
portfolio_app/scripts/: build_content.py  build_frontend_content.py  build_static_site.py  chat_cv.py  patch_web_bundle.py  sync_data.py  sync_github.py  sync_resume.py  validate_links.py
portfolio_app/services/: content.py  github.py  resume.py
portfolio_mauricio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
public/: index.html  manifest.json
src/: main.py  portfolio.js  requirements.txt
src/assets/: portfolio_content.json
src/portfolio/: __init__.py  app.py  data_loader.py  interaction.py  responsive.py  theme.py
static/css/: main.520adc54.css  main.520adc54.css.map  main.8a989f22.css  main.8a989f22.css.map
static/js/: 64.0f067139.chunk.js  64.0f067139.chunk.js.map  64.98cb7fdf.chunk.js  64.98cb7fdf.chunk.js.map  769.6babb3a9.chunk.js  769.6babb3a9.chunk.js.map  769.e547b2ef.chunk.js  769.e547b2ef.chunk.js.map  main.2ac5b675.js  main.2ac5b675.js.map  main.34851b59.js  main.34851b59.js.map  main.524c1754.js  main.524c1754.js.map  main.55b3950d.js  main.55b3950d.js.map  main.75726ce5.js  main.75726ce5.js.map  main.783504c2.js  main.783504c2.js.map  main.7b2f0221.js  main.7b2f0221.js.map  (+14 more)
tests/: test_app.py  test_build_content.py  test_build_static_site.py  test_content.py  test_flet_app.py  test_flet_components.py  test_patch_web_bundle.py  test_sync_data.py  test_sync_github.py  test_sync_resume.py  test_validate_links.py
(+42 files in other folders)
