[project]
name = "portfolio-mauricio"
version = "0.2.0"
description = "Python content and sync tooling for Mauricio Obando's Flutter portfolio"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.1",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.8",
  "mypy>=1.15.0"
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["portfolio_app*"]

[tool.setuptools.package-data]
portfolio_app = ["data/*.yaml"]

[build-system]
requires = ["setuptools>=80.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"
