[project]
name = "portfolio-mauricio"
version = "0.2.0"
description = "Python-only Flet portfolio for Mauricio Obando"
requires-python = ">=3.14"
dependencies = [
  "flet>=0.84.0",
  "flet-lottie>=0.84.0",
  "httpx>=0.28.1",
  "openai>=1.75.0",
  "pypdf>=5.5.0",
  "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "flet-cli>=0.84.0",
  "pytest>=8.3.5",
  "ruff>=0.11.8",
  "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flet.app]
path = "src"
module = "main.py"

[tool.flet]
product = "Mauricio Obando Portfolio"
company = "Mauricio Obando"

[tool.flet.web]
base_url = "/portfolioMauricioobgo/"
route_url_strategy = "hash"
renderer = "auto"
pwa_background_color = "#071018"
pwa_theme_color = "#12F7A0"
wasm = true

[tool.setuptools.packages.find]
include = ["portfolio_app*"]

[tool.setuptools.package-data]
portfolio_app = ["data/*.yaml"]

[build-system]
requires = ["setuptools>=80.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"
